##
## Input file for automake
##
## (C) 2007 Francesco Salvestrini <salvestrini@sourceforge.net>
##

include $(top_srcdir)/Makefile.sub

EXTRA_DIST =					\
	changelog.page				\
	contents.as				\
	files.as				\
	filters.page				\
	index.page				\
	level1/test1.page			\
	level1/level1/test11-1.page		\
	level1/level1/test11-2.page		\
	level1/level1/test11-3.page		\
	level1/level1/test11.page		\
	level1/level2/level1/test121.page	\
	level1/level2/test12.page		\
	level2/test2.page			\
	map.as					\
	pages.as				\
	site.as					\
	svnlog.page				\
	variables.page				\
	wikitext.page
