##
## Input file for automake
##
## (C) 2007 Francesco Salvestrini <salvestrini@sourceforge.net>
##

include $(top_srcdir)/Makefile.sub

perllibdir = $(pkgvlibsdir)/perl/Sitetool/OS

dist_perllib_DATA =				\
	Directory.pm				\
	Environment.pm				\
	File.pm					\
	Filename.pm				\
	Shell.pm				\
	String.pm				\
	Options.pm

